--- a/src/venilla.css
+++ b/src/venilla.css
@@ -5,17 +5,8 @@
   --font-manrope: "Manrope", sans-serif;
 }
 
-/* utility classes */
-.flex {
-  display: flex;
-}
-
-nav {
-  /* width: 100dvh;
-  margin-top: 4dvh; */
-}
 .nav-container {
-  margin-inline: 15dvw;
+  margin-inline: 15vw;
   width: 70dvw;
   justify-content: space-between;
   align-items: center;
@@ -40,6 +31,7 @@ nav {
   transition: all 0.3s;
 }
 .nav-opt {
+  display: block;
   justify-content: center;
   align-items: center;
   gap: 0.8rem;
@@ -54,6 +46,21 @@ nav {
   border-radius: 0.8rem;
   padding: 0.5rem 1rem;
   transition: all 0.3s;
+  cursor: pointer;
+}
+
+.menu-icon{
+  display: none;
+}
+.close-icon{
+  display: none;
+}
+#dark-mode-icon, #toggle-dark{
+  transition: all 0.5s;
+}
+
+#toggle-dark:hover{
+  fill: white;
 }
 
 .nav-opt button:hover {
@@ -73,7 +80,7 @@ nav {
 .team-grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+  gap: 1rem;
   justify-items: center;
   align-items: center;
   min-height: 70dvh;
@@ -147,40 +154,35 @@ nav {
 }
 
 /* Responsive */
-
-@media (max-width: 900px) {
-  .team-grid-container {
-    grid-template-columns: 1fr;
-    gap: 2rem;
-    min-height: unset;
-    padding: 2rem 0;
+@media (max-width: 425px) {
+  .nav-opt a {
+    display: none;
+  }
+  .nav-container{
+    margin-inline: 2rem;
+    justify-content: center;
+  }
+  .menu-icon{
+    display: block;
   }
 }
-@media (max-width: 425px) {
+/* @media (max-width: 425px) {
   .nav-container{
     margin-inline: 0vw;
   }
   .nav-opt {
     gap:0rem
   }
-}
-@media (max-width: 375px) {
-  .nav-container{
-    margin-inline: 50%;
-  }
-  .nav-opt {
-    display: none;
-    gap:0rem
-  }
-}
-
+} */
 @media (max-width: 768px) {
   .nav-container{
     margin-inline: 15vw;
   }
-  .nav-opt {
-    /* display: none; */
-    gap:0.2rem
+  .nav-opt a {
+    display: none;
+  }
+    .menu-icon{
+    display: block;
   }
 
   .footer-container {
@@ -193,4 +195,14 @@ nav {
     align-items: flex-start;
     gap: 0.5rem;
   }
+}
+
+@media (max-width: 900px) {
+    .team-grid-container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        min-height: unset;
+        padding: 2rem 0;
+        margin-left: 0.25rem;
+    }
 }
